# run-schedule-assistant

./: README.md  docker-compose.yaml  pyproject.toml  railway.toml
src/: api.py  app.py
src/handlers/: schedules.py
src/models/: schedule.py
src/run_schedule_assistant/: main.py
src/settings/: settings.py
src/utils/: aws.py  cache.py  rutgers.py
