[project]
name = "run-schedule-assistant"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Melvin Almonte", email = "melvinalmonte@gmail.com"},
]
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.2.1",
    "requests>=2.31.0",
    "black>=24.2.0",
    "flake8>=7.0.0",
    "boto3>=1.34.49",
    "redis>=5.0.2",
]
requires-python = ">=3.8.1"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120

[tool.pdm.scripts]
lint = "flake8 src"
format = "black src"
